# quarto_batch_convert

./: .gitignore  CLAUDE.md  LICENSE.txt  README.md  _test.ipynb  auto-test.md  batch_convert.ps1  main.py  pr-test.md  pyproject.toml  quarto_batch_convert.py  requirements.txt  setup.py  test-auto-merge.md  test-release.md  test_file  trigger-test.txt  workflow-test.md
.github/: RELEASE.md
.github/workflows/: claude-code-review.yml  python-publish.yml  release.yml  test.yml  version-bump.yml
.github/workflows/archive/: version-bump.yml
_todo/: todo.md
_todo/completed/2025-10-20/: add-label-for-pr.md  fix-test-workflow.md
_todo/completed/2025-10-21/: fix-workflow-status-reporting.md  new-release-workflow.md
_todo/pending/: new-release-workflow.md
_todo/proposal/: fix-test-workflow.md  new-release-workflow.md
quarto_batch_convert/: quarto_batch_convert.py
src/quarto_batch_convert/: quarto_batch_convert.py  version.py
temp_test_dir/output/: TEST.ipynb
tests/: manual.py  test_quarto_batch_convert.py  test_quarto_installation.py
tests/assets/: __test.ipynb  __test.qmd
tests/assets/nested/: README.md  __test3.ipynb
