[project]
name = "quarto-batch-convert"
version = "2025.08.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click==8.1.3",
    "ipython==8.23.0",
]


[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

[project.scripts]
quarto-batch-convert = "quarto_batch_convert.quarto_batch_convert:convert_files"
qbc = "quarto_batch_convert.quarto_batch_convert:convert_files"