[project]
name = "quarto-batch-convert"
version = "2025.08.0"
description = "Converts multiple Jupyter notebooks to Quarto documents at once"
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = ">=3.13"
dependencies = [
    "click==8.1.3",
]


[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

[project.scripts]
quarto-batch-convert = "quarto_batch_convert.quarto_batch_convert:convert_files"
qbc = "quarto_batch_convert.quarto_batch_convert:convert_files"
