[project]
name = "quarto-batch-convert"
version = "2025.9.1"
description = "Converts multiple Jupyter notebooks to Quarto documents at once"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE.txt"]
requires-python = ">=3.13"
dependencies = [
    "click==8.1.3",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["quarto", "jupyter", "notebook", "converter", "cli"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

[project.scripts]
quarto-batch-convert = "quarto_batch_convert.quarto_batch_convert:convert_files"
qbc = "quarto_batch_convert.quarto_batch_convert:quarto_batch_convert"

[build-system]
requires = ["uv_build>=0.8.9,<0.9.0"]
build-backend = "uv_build"

[project.urls]
"Homepage" = "https://github.com/kompre/quarto_batch_convert"
